# piinstaller

./: .env.example  .env.example.devserver  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BOOTSTICK_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEBIAN_TRIXIE.md  Dockerfile  ERROR_RESOLUTION.md  FEATURES.md  FINAL_SOLUTION.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  PLAN.md  PROJECT_ROADMAP_SETUPHELFER.md  PROJECT_SUMMARY.md  PYTHON_SETUP.md  QUICKSTART.md  README.md  README_START.md  REMOTE_ENTWICKLUNG.md  REPOSITORY_ERSTELLEN.md  SECURITY.md  SUGGESTIONS.md  UMZUG.md  VERSION  VERSIONING.md  WORKFLOW_LAPTOP_PI.md  WORKFLOW_QUICKSTART.md  dev-tauri.sh  docker-compose.yml  nginx.conf  package.json  pi-installer-backend.service  pi-installer.service  pi-installer.service.install  (+10 more)
backend/: =2.5  ARCH_PLACEHOLDER  CONFIG.md  __init__.py  app.py  inspect.py  job_rt_outside.json  oled_display_runner.py  presets.py  pytest.ini  requirements-minimal.txt  requirements.txt  sitecustomize.py  update_center.py  version.py
config/: runtime_ports.json  version.json
debian/: changelog  control  pi-installer-browser.desktop  pi-installer.desktop  pi-installer.service  pi-installer.sh  postinst  postrm  prerm  rules  setuphelfer-backend.service  setuphelfer.desktop  (+3 more)
docs/private-server-skeletons/beta-registration-server/: README.md  pyproject.toml
docs/private-server-skeletons/beta-registration-server/app/: main.py
docs/private-server-skeletons/beta-registration-server/migrations/: 001_initial_beta_schema.sql
frontend/src-tauri/: Cargo.toml  deb-changelog.txt  tauri.conf.json
frontend/src-tauri/capabilities/: cockpit.json  default.json
frontend/src-tauri/resources/: setuphelfer-version.json
frontend/src-tauri/src/: dev_dashboard_standalone.rs  lib.rs  main.rs
(+5177 files in other folders)
